ci: improve coverage reports